--- a/.html
+++ b/.html
@@ -32,64 +32,45 @@
       scroll-behavior: smooth;
     }
 
-    /* Hero Section */
+/* Hero Section with real background image */
 header {
+  background: url('https://images.unsplash.com/photo-1522202220652-31e0a3b20656?auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover;
+  color: #fff;
+  text-align: center;
+  padding: 10rem 1rem 8rem;
   position: relative;
-  height: 500px; /* taller for more impact */
-  background: url('https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=1470&q=80') no-repeat center center/cover;
-  color: var(--white);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  padding: 0 1rem;
-  font-weight: 600;
-  font-family: 'Poppins', sans-serif;
-}
-
-header::before {
-  content: "";
-  position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background: rgba(0, 0, 0, 0.6); /* slightly stronger dark overlay */
-  z-index: 0;
-}
-
-header h1,
-header p,
-header .cta-btn {
-  position: relative;
-  z-index: 1; /* above overlay */
-  text-shadow: 0 2px 6px rgba(0,0,0,0.7);
 }
 
 header h1 {
-  font-size: 3.5rem;
+  font-size: 3rem;
   margin-bottom: 0.5rem;
+  text-shadow: 2px 2px 10px rgba(0,0,0,0.5);
 }
 
 header p {
-  font-size: 1.5rem;
-  margin-bottom: 1.8rem;
+  font-size: 1.2rem;
+  margin-bottom: 1.5rem;
+  text-shadow: 1px 1px 8px rgba(0,0,0,0.5);
 }
 
 .cta-btn {
   display: inline-block;
-  background: var(--white);
-  color: var(--primary);
-  padding: 1rem 2.5rem;
+  background: #fff;
+  color: #4f46e5;
+  padding: 0.8rem 1.8rem;
   border-radius: 50px;
-  font-weight: 700;
+  font-weight: 600;
   text-decoration: none;
   transition: all 0.3s ease;
-  box-shadow: 0 4px 15px rgba(79, 70, 229, 0.4);
 }
 
 .cta-btn:hover {
-  background: rgba(255,255,255,0.95);
-  color: var(--secondary);
-  box-shadow: 0 6px 20px rgba(124, 58, 237, 0.6);
+  background: rgba(255,255,255,0.85);
+  color: #7c3aed;
 }
 
     /* Sections */
@@ -256,6 +237,7 @@ header p {
 
 </body>
 </html>
+
 
 
 
